original deletion of the 	arget folder after swapping to JAva 8 obviously wasn't enough. when I ran unit tests this morning, hit a few compatibility snags where Java11 methods were being used. This has been corrected. Unit tests pass again